infra/k8s/product-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-deployment
spec:
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
      - name: product-deployment
        image: navaneethvinod/product-service
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: product-svc
spec:
  selector:
    app: product
  ports:
  - port: 3002
    targetPort: 3002
