infra/k8s/user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
spec:
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
      - name: user-deployment
        image: navaneethvinod/user-service
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: user-svc
spec:
  selector:
    app: user
  ports:
  - port: 3000
    targetPort: 3000
