infra/k8s/user-mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-mongo-deployment
spec:
  selector:
    matchLabels:
      app: user-mongo
  template:
    metadata:
      labels:
        app: user-mongo
    spec:
      containers:
      - name: user-mongo-deployment
        image: mongo
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: user-mongo-svc
spec:
  selector:
    app: user-mongo
  ports:
  - port: 27017
    targetPort: 27017
