infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-svc
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - host: unni.com
    http:
      paths:
      - pathType: ImplementationSpecific
        path: "/api/users/(.*)"
        backend:
          service:
            name: user-svc
            port:
              number: 3001
      - pathType: ImplementationSpecific
        path: "/api/products/(.*)"
        backend:
          service:
            name: product-svc
            port:
              number: 3002
